# Qt_Player

./: .gitignore  CMakeLists.txt  README.md  audiodecodethread.cpp  audiodecodethread.h  audiodevice.cpp  audiodevice.h  audioplayer.cpp  audioplayer.h  demuxthread.cpp  ffmpegplayer.cpp  ffmpegplayer.h  i420render.cpp  i420render.h  log.cpp  main.cpp  main.qml  packetqueue.cpp  qml.qrc  videodecodethread.cpp  videoitem.cpp  videoitem.h
Audio/: audioplayer.cpp  audioplayer.h
AudioThread/: audiodecodethread.cpp  audiodecodethread.h
DemuxThread/: demuxthread.cpp  demuxthread.h
PacketQueue/: packetqueue.h
Player/: FFmpegPlayer.h  ffmpegplayer.cpp
VideoItem/: videofboitem.cpp  videofboitem.h  videoitem.cpp  videoitem.h
VideoThread/: videodecodethread.cpp
log/: log.h
qml/: footer.qml  main.qml
qml/footer/: Footer.qml
